<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="uUser_agreement">Пользовательское соглашение</string>
    <string name="share_app_step2">https://practicum.yandex.ru/profile/android-developer</string>
    <string name="text_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="topic_message">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="e_mail">riabikina5@gmail.com</string>
    <string name="webesite">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="no_internet_light">Проблемы со связью \n\n Загрузка не удалась. Проверьте подключение к интернету </string>
    <string name="buttonApd">Обновить</string>
    <string name="clearHistory">Очистить историю</string>
    <string name="duration_media">Длительность</string>
    <string name="album_media"> Альбом</string>
    <string name="year_media">Год</string>
    <string name="genre_media">Жанр</string>
    <string name="country_media">Страна</string>
    <string name="history"> Вы искали </string>
    <string name="is_unknown">Неизвестно</string>
    <string name="null_time">00:00</string>
    <string name="tool_mediateka">Медиатека</string>
    <string name="mediateka_empty">Ваша медиатека пуста</string>
    <string name="playlists_empty">Вы не создали ни одного плейлиста</string>
    <string name="playlists_new">Новый плейлист</string>
    <string name="favorites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="creat">Создать</string>
    <string name="name">Название*</string>
    <string name="description">Описание</string>
    <string name="newplaylist">Новый плейлист</string>
    <string name="menu_share">Поделиться</string>
    <string name="menu_edit">Редактировать информацию</string>
    <string name="menu_delete">Удалить плейлист</string>
    <string name="no_tracks">В этом плейлисте нет треков</string>
</resources>