<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorPrimaryVariant"
        app:title="@string/search" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/string_star_2_screen"
        android:layout_marginEnd="@dimen/string_star_2_screen"
        android:background="@drawable/background_search_edit_text"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginEnd="30dp"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/search_icon"
            android:drawablePadding="9dp"
            android:foregroundTint="@color/serch_grey"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:shadowRadius="8"
            android:singleLine="true"
            android:textColor="@color/black_blue_background"
            android:textColorHint="@color/image"
            android:textCursorDrawable="@drawable/custom_cursor" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="14dp"
            android:src="@drawable/clean"/>

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/media_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:visibility="visible"
        tools:visibility="gone" />

    <FrameLayout

        android:id="@+id/nocontent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="gone">

        <ImageView
            style="@style/SongPlugPicture"
            app:srcCompat="@drawable/no_song" />

        <TextView

            style="@style/TextSongPlug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/nothing_was_found" />

    </FrameLayout>

    <FrameLayout

        android:id="@+id/nointernet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="gone">

        <ImageView
            style="@style/SongPlugPicture"
            app:srcCompat="@drawable/no_internet" />

        <TextView

            style="@style/TextSongPlug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_internet_light"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonApd"
            style="@style/ButtonApd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/buttonApd"
            app:cornerRadius="54dp" />

    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/searchHistory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/historySearch"
                style="@style/History"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/history"
                android:textAlignment="center"
                android:textSize="19sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/histiry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:visibility="visible" />


            <Button
                android:id="@+id/clearHistory"
                style="@style/ButtonApd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:text="@string/clearHistory"
                app:cornerRadius="54dp" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="visible">

        <ProgressBar
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/progressbar" />
    </FrameLayout>
</LinearLayout>
